[project]
name = "refund-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "pytest>=8.4.1",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
  "sqlalchemy>=2.0.42",
  "pytz>=2023.3",
  "coverage>=7.10.3",
  "pytest-cov>=6.2.1",
]

[tool.ruff]
ignore = ["E402"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "*/test_*",
    "*/__init__.py",
    "src/config.py",  # Configuration file
]

[tool.coverage.report]
show_missing = false
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = ".htmlcov"

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=40"
]
