[project]
name = "refund-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "pytest>=8.4.1",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
  "sqlalchemy>=2.0.42",
  "pytz>=2023.3",
  "coverage>=7.10.3",
  "pytest-cov>=6.2.1",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".logs",
  ".cache",
  ".github",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "__pypackages__",
  "tests",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
